# masaqitta-api

./: .gitignore  Dockerfile  Makefile  README.md  db.py  docker-compose.yml  dummytweet.json  main.py  manage.py  migrate_db.py  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializer.py  urls.py  views.py
api/migrations/: 0001_initial.py
cruds/: tweet.py
dummy/: dummytweet.json  dummyuser.json
masaqitta/: asgi.py  settings.py  urls.py  wsgi.py
models/: Favorite.py  Follow.py  grade.py  tweet.py  user.py
routers/: tweet.py  user.py
routes/: tweet.py  user.py
schemas/: tweet.py  user.py
