[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["smngs"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
sqlalchemy = "^1.4.43"
aiomysql = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
